@@ -9,6 +9,9 @@ import com.culinary.userservice.recipe.model.Recipe;
 import com.culinary.userservice.recipe.repository.GeneralRecipeRepository;
 import com.culinary.userservice.user.exception.NotFoundException;
 import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -74,15 +77,21 @@ public class GeneralRecipeService {
                 .collect(toList());
     }
 
-    public List<GetGeneralRecipeDTO> getFilteredGeneralRecipes(Optional<String> name,
+
+
+    public Page<GetGeneralRecipeDTO> getFilteredGeneralRecipes(Optional<String> name,
                                                                Optional<String> mealType,
                                                                Optional<Integer> minCalories,
                                                                Optional<Integer> maxCalories,
-                                                               Optional<List<String>> dietTypes) {
+                                                               Optional<List<String>> dietTypes,
+                                                               Pageable pageable) {
         List<GeneralRecipe> allRecipes;
 
-        if (name.isPresent()) allRecipes = generalRecipeRepository.findByNameRegex(name.get());
-        else allRecipes = generalRecipeRepository.findAll();
+        if (name.isPresent()) {
+            allRecipes = generalRecipeRepository.findByNameRegex(name.get());
+        } else {
+            allRecipes = generalRecipeRepository.findAll();
+        }
 
         Predicate<GeneralRecipe> combinedPredicate = recipe -> true;
 
@@ -106,12 +115,21 @@ public class GeneralRecipeService {
                     dietTypes.get().stream()
                             .map(String::toUpperCase)
                             .map(String::trim)
-                            .anyMatch(dietType -> dietType.equalsIgnoreCase(recipe.getBaseRecipe().getDietType().getDietType())));
+                            .anyMatch(dietType ->
+                                    dietType.equalsIgnoreCase(recipe.getBaseRecipe().getDietType().getDietType())));
         }
 
-        return allRecipes.stream()
+        List<GetGeneralRecipeDTO> filteredRecipes = allRecipes.stream()
                 .filter(combinedPredicate)
                 .map(GeneralRecipeMapper::toGetDTO)
-                .collect(Collectors.toList());
+                .toList();
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), filteredRecipes.size());
+
+        List<GetGeneralRecipeDTO> paginatedRecipes = filteredRecipes.subList(start, end);
+
+        return new PageImpl<>(paginatedRecipes, pageable, filteredRecipes.size());
     }
+
 }
